making the other actions, might be hitting the rate limit

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Chat App</title>
+    <title>TVMaze Frontend</title>
     <meta name="description" content="Frontend for the tvmaze api">
     <meta name="author" content="louisboyle.co.uk">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
